// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`screen: Nav/mobile/navbar it renders 1`] = `
<div
  className="makeStyles-root"
>
  <a
    className="makeStyles-a"
    href="/"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="makeStyles-logo"
      id="RED"
    />
  </a>
  <div
    className="makeStyles-actions"
  >
    <div
      aria-label="desmos-mainnet"
      className="makeStyles-network"
      onClick={[MockFunction]}
      role="button"
      tabIndex={0}
    >
      <p
        className="text"
      >
        desmos-mainnet
      </p>
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
        color="#999999"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
        />
      </svg>
    </div>
    <div>
      <div
        aria-label="wallet-details-button"
        className=""
        onClick={[Function]}
        role="button"
        tabIndex={0}
      />
      <div
        className="makeStyles-networkList makeStyles-root makeStyles-root"
      >
        <div
          className="makeStyles-walletDetails"
        >
          <div
            className="makeStyles-walletInfo"
          >
            <div
              className="makeStyles-walletAvatar"
            >
              <div
                className="makeStyles-avatar makeStyles-root"
              >
                <svg
                  data-jdenticon-value="desmos13yp2fq3tslq6mmtq4628q38xzj75ethzela9uu"
                  height="100%"
                  width="100%"
                />
              </div>
              <div
                className="makeStyles-whiteDot"
              />
              <div
                className="makeStyles-greenDot"
              />
            </div>
            <div
              className="makeStyles-walletLabel"
            >
              Wallet 3
              <div>
                <span
                  className="MuiTypography-root makeStyles-walletAddress MuiTypography-caption"
                >
                  desmos13y...9uu
                </span>
                <div
                  className="makeStyles-copyIcon"
                  id="RED"
                  onClick={[Function]}
                />
              </div>
            </div>
          </div>
          <hr
            className="MuiDivider-root makeStyles-divider"
          />
          <div
            aria-label="account-details-button"
            className="makeStyles-accountDetailsButton"
            onClick={[Function]}
            role="button"
            tabIndex={0}
          >
            <div
              className="makeStyles-accountDetailsLabel"
            >
              <div
                className="makeStyles-blackDot"
              />
              <div
                className="makeStyles-accountDetails"
              >
                accountDetails
              </div>
            </div>
          </div>
        </div>
        <div
          aria-label="change-wallet-button"
          className="makeStyles-changeWalletButton"
          onClick={[Function]}
          role="button"
          tabIndex={0}
        >
          <div
            className="makeStyles-changeWalletButtonLabel"
          >
            changeWallet
          </div>
        </div>
        <hr
          className="MuiDivider-root makeStyles-bottomDivider"
        />
        <div
          className="makeStyles-signOut"
        >
          <div
            aria-label="sign-out-button"
            className="makeStyles-signOutButton"
            onClick={[Function]}
            role="button"
            tabIndex={0}
          >
            <div
              className="makeStyles-signOutLabel"
            >
              <div
                className="makeStyles-signOutIcon"
                id="RED"
                onClick={[Function]}
              />
              <div
                className="makeStyles-signOutText"
              >
                signOut
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-label="open navigation menu"
      className="makeStyles-hamburger"
      onClick={[MockFunction]}
      role="button"
      tabIndex={0}
    >
      <div
        className="hamburger-content"
      />
    </div>
  </div>
</div>
`;

exports[`screen: Nav/mobile/navbar toggleNavMenus is called onClick 1`] = `
<div
  className="makeStyles-root"
>
  <a
    className="makeStyles-a"
    href="/"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="makeStyles-logo"
      id="RED"
    />
  </a>
  <div
    className="makeStyles-actions"
  >
    <div
      aria-label="desmos-mainnet"
      className="makeStyles-network"
      onClick={[MockFunction]}
      role="button"
      tabIndex={0}
    >
      <p
        className="text"
      >
        desmos-mainnet
      </p>
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
        color="#999999"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
        />
      </svg>
    </div>
    <div>
      <div
        aria-label="wallet-details-button"
        className=""
        onClick={[Function]}
        role="button"
        tabIndex={0}
      />
      <div
        className="makeStyles-networkList makeStyles-root makeStyles-root"
      >
        <div
          className="makeStyles-walletDetails"
        >
          <div
            className="makeStyles-walletInfo"
          >
            <div
              className="makeStyles-walletAvatar"
            >
              <div
                className="makeStyles-avatar makeStyles-root"
              >
                <svg
                  data-jdenticon-value="desmos13yp2fq3tslq6mmtq4628q38xzj75ethzela9uu"
                  height="100%"
                  width="100%"
                />
              </div>
              <div
                className="makeStyles-whiteDot"
              />
              <div
                className="makeStyles-greenDot"
              />
            </div>
            <div
              className="makeStyles-walletLabel"
            >
              Wallet 3
              <div>
                <span
                  className="MuiTypography-root makeStyles-walletAddress MuiTypography-caption"
                >
                  desmos13y...9uu
                </span>
                <div
                  className="makeStyles-copyIcon"
                  id="RED"
                  onClick={[Function]}
                />
              </div>
            </div>
          </div>
          <hr
            className="MuiDivider-root makeStyles-divider"
          />
          <div
            aria-label="account-details-button"
            className="makeStyles-accountDetailsButton"
            onClick={[Function]}
            role="button"
            tabIndex={0}
          >
            <div
              className="makeStyles-accountDetailsLabel"
            >
              <div
                className="makeStyles-blackDot"
              />
              <div
                className="makeStyles-accountDetails"
              >
                accountDetails
              </div>
            </div>
          </div>
        </div>
        <div
          aria-label="change-wallet-button"
          className="makeStyles-changeWalletButton"
          onClick={[Function]}
          role="button"
          tabIndex={0}
        >
          <div
            className="makeStyles-changeWalletButtonLabel"
          >
            changeWallet
          </div>
        </div>
        <hr
          className="MuiDivider-root makeStyles-bottomDivider"
        />
        <div
          className="makeStyles-signOut"
        >
          <div
            aria-label="sign-out-button"
            className="makeStyles-signOutButton"
            onClick={[Function]}
            role="button"
            tabIndex={0}
          >
            <div
              className="makeStyles-signOutLabel"
            >
              <div
                className="makeStyles-signOutIcon"
                id="RED"
                onClick={[Function]}
              />
              <div
                className="makeStyles-signOutText"
              >
                signOut
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-label="open navigation menu"
      className="makeStyles-hamburger"
      onClick={
        [MockFunction] {
          "calls": [
            [],
          ],
          "results": [
            {
              "type": "return",
              "value": undefined,
            },
          ],
        }
      }
      role="button"
      tabIndex={0}
    >
      <div
        className="hamburger-content"
      />
    </div>
  </div>
</div>
`;
